2010-12-28  Oliver Hader  <oliver.hader@typo3.org>

	* Cleanup: Fixed PHPdoc comments, type hints and XCLASS blocks
	* Cleanup: Renamed command map class file to start with proper extension prefix

2010-12-22  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug:#11606 Remove "Send to review / pub" from contextmenu

2010-12-21  Sonja Scholz  <ss@cabag.ch>

	* Fixed bug #11633: Versioning module should not be available when workspaces is loaded

2010-12-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #11290: PHP notices from XCLASS inclusions

2010-12-01  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Fixed ext_emconf.php
	* Raised version to 4.5.0beta2a

2010-12-01  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug: #11209: BACK_PATH is not handled right in class.tx_version_gui.php

2010-12-01  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Fixed ext_emconf.php
	* Raised version to 4.5.0beta2

2010-11-28  Sonja Scholz  <ss@cabag.ch>

	* Fixed bug #5923: Notify per email if groups are selected instead of single users